fix alignment glitch in navbar
Add positive margin-top to brand to align it with
the rest of the items in the navbar.

--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 2.5rem;
     font-weight: 900;
     padding: 0;
+    margin-top: 8px;
 }
 
 .navbar-brand,
@@ -223,7 +224,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .post .attribution {
-    /*color: #245566;*/
     color: #555;
     font-style: italic;
     font-size: 0.88rem;
